--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -50,10 +50,10 @@
                     </div>
                 </div>
                 <div class="text-center mt-3">
-                    <pagination-controls (pageChange)="p = $event"></pagination-controls>
+                    <pagination-controls *ngIf="(allBooks | search:searchKey).length > 0" (pageChange)="p = $event"></pagination-controls>
                 </div>
-                <div class="row">
-                <span *ngIf="(allBooks | search:searchKey).length==0" class="text-danger text-center fw-bolder">Book Not Found!!!</span>
+                <div class="row" style="min-height: 100vh;">
+                <h3 *ngIf="(allBooks | search:searchKey).length==0" class="text-danger text-center fw-bolder">Book Not Found!!!</h3>
                 
                 </div>
             </div>
